<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="action_search_title">Search</string>
    <string name="action_filter">Filter</string>
    <string name="sort_order_tile">Sort order</string>
    <string name="begin_date_title">Begin Date</string>
    <string name="sort_order_prompt">Choose a sort order</string>
    <string name="news_desk_title">News Desc Topics</string>
    <string name="chk_arts">Arts</string>
    <string name="chk_fashion_and_style"><![CDATA[Fashion & Style]]></string>
    <string name="chk_sports">Sports</string>
    <string name="Save">Save</string>
    <string-array name="sort_order_options">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
    <string name="filter_dialog_title">Filter Search Results</string>
    <string name="sort_order_default">Default</string>
    <string name="sort_order_newest">Newest</string>
    <string name="sort_order_oldest">Oldest</string>
    <string name="no_internet_text">You are not connected to Internet.\n Check your internet connection</string>
    <string name="snackbar_internet_action_text">Turn on Internet</string>
    <string name="request_failed_text">"Failed to get articles. Please try again!"</string>
    <string name="request_failed_too_many_requests_text">"Too many requests. Please try again later!"</string>
    <string name="share_title">Share</string>
</resources>
