<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvBeginDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/begin_date_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginTop="@dimen/article_card_vertical_margin"/>

    <DatePicker
        android:id="@+id/dpBeginDate"
        style="@style/date_picker_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBeginDateTime"
        android:layout_marginTop="@dimen/fragment_vertical_margin" />

    <TextView
        android:id="@+id/tvSortOrderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dpBeginDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:text="@string/sort_order_tile"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <Spinner
        android:id="@+id/spSortOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSortOrderTitle"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:entries="@array/sort_order_options"
        android:prompt="@string/sort_order_prompt"
        android:layout_marginLeft="@dimen/article_card_spinner_margin"
        android:layout_marginStart="@dimen/article_card_spinner_margin"
        android:layout_marginRight="@dimen/article_card_spinner_margin"
        android:layout_marginEnd="@dimen/article_card_spinner_margin"/>

    <TextView
        android:id="@+id/tvNewsDeskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spSortOrder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:text="@string/news_desk_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <CheckBox
        android:id="@+id/cbArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNewsDeskTitle"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:text="@string/chk_arts"
        android:layout_alignLeft="@+id/spSortOrder"
        android:layout_alignStart="@+id/spSortOrder"/>

    <CheckBox
        android:id="@+id/cbFashionAndStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spSortOrder"
        android:layout_alignStart="@+id/spSortOrder"
        android:layout_below="@+id/cbArts"
        android:text="@string/chk_fashion_and_style" />

    <CheckBox
        android:id="@+id/cbSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spSortOrder"
        android:layout_alignStart="@+id/spSortOrder"
        android:layout_below="@+id/cbFashionAndStyle"
        android:text="@string/chk_sports" />

    <Button
        android:id="@+id/btnSaveFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:text="@string/Save"
        android:background="@android:color/holo_green_dark"/>
</RelativeLayout>
